--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hasan Mostafiz Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="coral">Hasan Mostafiz</span> World</h1>
+            <h3>Building climber and Train Stopper</h3>
+            <p id="details">I am not really a building climber or a train stopper. But I do like to climb up all the
+                challenges in my life and improve my skills day by day. Right now, I am learning web development. It is
+                also
+                a challenge to me and I will overcome it with hard-work and dedication.</p>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/">Hire Me</a>
+        </div>
+
+        <div class="half-width">
+            <img src="showoff/my-bg.png" alt="">
+        </div>
+
+
+    </section>
+
 </body>
+
 </html>
