--- a/index.html
+++ b/index.html
@@ -26,10 +26,24 @@
         </div>
 
         <div class="half-width">
-            <img src="showoff/my-bg.png" alt="">
+            <img src="showOff/my-bg.png" alt="">
         </div>
 
 
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="showOff/my-bg2.png" alt="">
+        </div>
+        <div>
+            <h2>Dream Big</h2>
+            <h3>Become A Web Developer</h3>
+            <p>Now I know the basic of HTML and CSS. I can even teach a 3 years old child. This is a simple website
+                build by me. I
+                am planning to build 2 more. Thank you.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/">Download Resume</a>
+        </div>
     </section>
 
 </body>
