--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="coral">Hasan Mostafiz</span> World</h1>
@@ -31,18 +31,40 @@
 
 
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="showOff/my-bg2.png" alt="">
         </div>
         <div>
             <h2>Dream Big</h2>
             <h3>Become A Web Developer</h3>
-            <p>Now I know the basic of HTML and CSS. I can even teach a 3 years old child. This is a simple website
+            <p id="details">Now I know the basic of HTML and CSS. I can even teach a 3 years old child. This is a simple
+                website
                 build by me. I
                 am planning to build 2 more. Thank you.
             </p>
             <a class="link-button" target="_blank" href="https://www.youtube.com/">Download Resume</a>
+        </div>
+    </section>
+    <section class="experiance-area">
+        <h1>Experiances</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h3>2024-Present | Pro Web Developer</h3>
+                <p>I am the master of HTML, CSS and JAVASCRIPT. I know everything needed to
+                    make a website function, efficient. I didn't stop with the web. I went beyond with most popular
+                    Javascript framework called Vue JS. I even know the deployment, server and security. I will give you
+                    100% web solution.
+                </p>
+
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer</h1>
+                <h3>2022-2024 | Hero Learner</h3>
+                <p>Currently, I am learning HTML, CSS and JAVASCRIPT. I am practicing more and more. I am learning new
+                    things about web development everyday. Because I won't stop until I am the best.</p>
+            </div>
         </div>
     </section>
 
