--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <section class="experiance-area">
         <h1>Experiances</h1>
         <div class="flexible-container">
-            <div class="half-width">
+            <div id="full-stack-developer" class="experiance-item">
                 <h1>Full Stack Developer</h1>
-                <h3>2024-Present | Pro Web Developer</h3>
+                <h3 class="coral">2024-Present | Pro Web Developer</h3>
                 <p>I am the master of HTML, CSS and JAVASCRIPT. I know everything needed to
                     make a website function, efficient. I didn't stop with the web. I went beyond with most popular
                     Javascript framework called Vue JS. I even know the deployment, server and security. I will give you
@@ -59,9 +59,9 @@
                 </p>
 
             </div>
-            <div class="half-width">
+            <div id="baby-web-developer" class="experiance-item">
                 <h1>Baby Web Developer</h1>
-                <h3>2022-2024 | Hero Learner</h3>
+                <h3 class="coral">2022-2024 | Hero Learner</h3>
                 <p>Currently, I am learning HTML, CSS and JAVASCRIPT. I am practicing more and more. I am learning new
                     things about web development everyday. Because I won't stop until I am the best.</p>
             </div>
